--- a/assets/css/scrolling-nav.css
+++ b/assets/css/scrolling-nav.css
@@ -65,6 +65,7 @@ th, td {
 .tg .tg-1tol{font-weight:bold;border-color:#000000;text-align:left;vertical-align:middle}
 .tg .tg-12k0{text-decoration:underline;border-color:#000000;text-align:left;vertical-align:top}
 .tg .tg-cly1{text-align:left;vertical-align:middle;}
+.tg .tg-0lax{text-align:left;vertical-align:top}
 /* ---------------------------- ------------------------------ */
 
 /* -----------------------IMAGENES ------------------------------ */
