--- a/assets/css/scrolling-nav.css
+++ b/assets/css/scrolling-nav.css
@@ -49,6 +49,14 @@ h5 {
   font-size: large;
   text-align: left;
 }
+
+h6 { 
+  text-transform: capitalize;
+  font-size: normal;
+  text-align: left;
+  font-style: italic;
+}
+
 /* -----------------------TABLAS ------------------------------ */
 table{
   table-layout: fixed;
@@ -74,6 +82,9 @@ th, td {
 .tg .tg-cly1{text-align:left;vertical-align:middle;}
 .tg .tg-lboi{border-color:inherit;text-align:left;vertical-align:middle}
 .tg .tg-0lax{text-align:left;vertical-align:top}
+.tg .tg-1wig{font-weight:bold;text-align:left;vertical-align:top}
+.tg .tg-fymr{border-color:inherit;font-weight:bold;text-align:left;vertical-align:top}
+
 /* ---------------------------- ------------------------------ */
 
 /* -----------------------IMAGENES ------------------------------ */
